--- a/University.API/appsettings.json
+++ b/University.API/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLExpress;Database=P324_Api;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLExpress;Database=Api_test;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
